--- a/public/phaser.html
+++ b/public/phaser.html
@@ -56,6 +56,7 @@
   </div>
 
   <!-- Load main.js, which imports Phaser and your GameScene -->
+   <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.js"></script>
   <script type="module" src="src/main.js"></script>
 </body>
 </html>
