done with music,minimap,and proper scenes

--- a/public/phaser.html
+++ b/public/phaser.html
@@ -13,7 +13,10 @@
       top: 16px; 
       width: 160px; 
       height: 120px; 
-      background: rgba(255,255,255,.07); 
+      //background: rgba(255,255,255,.07); 
+       background-image: url('public/tilesets/city01.png'); /*  Add this line */
+    background-size: cover;          /* This makes the image fill the box */
+    background-position: center;
       border: 1px solid #666; 
       border-radius: 8px; 
     }
