--- a/public/phaser.html
+++ b/public/phaser.html
@@ -1,65 +1,120 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>VirtueVille</title>
-  <style>
-    html, body, #game { height: 100%; margin: 0; background: #0e0e0e; }
-    #ui { position: absolute; inset: 0; pointer-events: none; font-family: system-ui, sans-serif; }
-    .minimap { 
-      position: absolute; 
-      right: 16px; 
-      top: 16px; 
-      width: 160px; 
-      height: 120px; 
-      //background: rgba(255,255,255,.07); 
-       background-image: url('public/tilesets/city01.png'); /*  Add this line */
-    background-size: cover;          /* This makes the image fill the box */
-    background-position: center;
-      border: 1px solid #666; 
-      border-radius: 8px; 
-    }
-    .charboard { 
-      position: absolute; 
-      left: 50%; 
-      top: 50%; 
-      transform: translate(-50%, -50%); 
-      background: #111; 
-      color: #fff; 
-      padding: 20px; 
-      border-radius: 12px; 
-      display: none; 
-      width: 420px; 
-      box-shadow: 0 10px 30px rgba(0,0,0,.5); 
-    }
-    .btn { 
-      pointer-events: auto; 
-      padding: 8px 12px; 
-      margin-top: 12px; 
-      border: 0; 
-      border-radius: 8px; 
-      background: #30d5c8; 
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-  <!-- Phaser game canvas -->
-  <div id="game"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>VirtueVille</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      html,
+      body {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background: linear-gradient(
+          135deg,
+          #0e0e0e 0%,
+          #1a1a2e 50%,
+          #16213e 100%
+        );
+      }
 
-  <!-- UI overlay -->
-  <div id="ui">
-    <div class="minimap" id="minimap"></div>
-    <div class="charboard" id="charboard">
-      <h3>Character Board (WIP)</h3>
-      <div id="traits"></div>
-      <button class="btn" id="closeBoard">Close</button>
+      #game {
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+        display: block;
+      }
+
+      #game canvas {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+
+      #ui {
+        position: absolute;
+        inset: 0;
+        pointer-events: none;
+        font-family: "Poppins", system-ui, sans-serif;
+      }
+
+      .minimap {
+        position: absolute;
+        right: 16px;
+        top: 16px;
+        width: 160px;
+        height: 120px;
+        background: rgba(0, 0, 0, 0.6);
+        background-image: url("/tilesets/city01.png");
+        background-size: cover;
+        background-position: center;
+        border: 2px solid rgba(156, 39, 176, 0.6);
+        border-radius: 12px;
+        box-shadow: 0 4px 20px rgba(156, 39, 176, 0.3),
+          inset 0 2px 10px rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(8px);
+        transition: all 0.3s ease;
+      }
+
+      .minimap:hover {
+        border-color: rgba(156, 39, 176, 0.9);
+        box-shadow: 0 6px 30px rgba(156, 39, 176, 0.5),
+          inset 0 2px 10px rgba(255, 255, 255, 0.15);
+        transform: scale(1.05);
+      }
+
+      .charboard {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
+        color: #fff;
+        padding: 30px;
+        border-radius: 20px;
+        display: none;
+        width: 420px;
+        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.7),
+          inset 0 2px 20px rgba(255, 255, 255, 0.05);
+        border: 2px solid rgba(156, 39, 176, 0.4);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+      }
+      .btn {
+        pointer-events: auto;
+        padding: 8px 12px;
+        margin-top: 12px;
+        border: 0;
+        border-radius: 8px;
+        background: #30d5c8;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Phaser game canvas -->
+    <div id="game"></div>
+
+    <!-- UI overlay -->
+    <div id="ui">
+      <div class="minimap" id="minimap"></div>
+      <div class="charboard" id="charboard">
+        <h3>Character Board (WIP)</h3>
+        <div id="traits"></div>
+        <button class="btn" id="closeBoard">Close</button>
+      </div>
     </div>
-  </div>
 
-  <!-- Load main.js, which imports Phaser and your GameScene -->
-   <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.js"></script>
-  <script type="module" src="src/main.js"></script>
-</body>
+    <!-- Load main.js, which imports Phaser and your GameScene -->
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.js"></script>
+    <script type="module" src="src/main.js"></script>
+  </body>
 </html>
